# bigclust2

./: .gitignore  CLAUDE.md  DATA_FORMAT.md  README.md  bigclust2_launcher.py  pyproject.toml  run.py  zensical.toml
.github/workflows/: docs.yml  publish.yml
bigclust2/: __init__.py  cli.py  clusters.py  credentials.py  data.py  embeddings.py  figure.py  fuzzy.py  grow_shrink.py  label_placement.py  meta_sources.py  neuroglancer.py  plotly_export.py  project_builder.py  scatter.py  selection.py  utils.py  visuals.py
bigclust2/assets/: assets.afdesign
bigclust2/gui/: core.py  docs.py  loaders.py  project.py  tabs.py  update_check.py
bigclust2/gui/controls/: __init__.py  _scatter_control.py  filters.py  scatter_control.py  toggle_dialog.py
bigclust2/gui/widgets/: annotation_backends.py  annotations.py  command_dialog.py  command_palette.py  connectivity.py  credentials.py  distances.py  features.py  find_nearest.py  labels.py  meta_explorer.py  meta_merge.py  meta_sources.py  project_builder_dialog.py  project_details.py
docs/: index.md
docs/concepts/: data-model.md  data-sources.md  index.md  selection.md
docs/get-started/: credentials.md  example-dataset.md  first-project.md  index.md  installation.md
docs/how-to/: compare-features.md  create-a-local-dataset.md  export.md  filter-a-dataset.md  index.md  load-a-remote-dataset.md  push-annotations.md  recluster.md  recompute-embeddings.md  update-meta-data.md  work-in-several-views.md
docs/javascripts/: clusters.js
docs/reference/: backends.md  cli.md  data-format.md  index.md  menus.md  shortcuts.md  troubleshooting.md  widgets.md
docs/stylesheets/: extra.css  home.css
overrides/: home.html
scripts/: DOCS_MEDIA.md  record_docs_media.sh
