[project]
name = "bigclust2"
version = "0.1.0"
description = "A new gui for BigClust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pyside6>=6.8.2.1",
    "requests>=2.32.5",
    "polars>=1.36.1",
    "cmap>=0.6.2",
    "pygfx>=0.15.3",
    "llvmlite>=0.46.0",
    "numba>=0.63.1",
    "umap-learn>=0.5.9.post2",
    "scipy>=1.15.3",
    "gevent==25.5.1",
    "cloud-volume>=12.8.0",
    "octarine3d>=0.3.1",
    "octarine-navis-plugin>=0.1.4",
    "navis>=1.10.0",
    "dvidtools>=0.5.1",
]

[project.scripts]
bigclust = "bigclust.cli:app"
