[project]
name = "bigclust2"
version = "0.1.0"
description = "A new gui for BigClust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pyside6>=6.8.2.1",
    "requests>=2.32.5",
    "polars>=1.36.1",
    "cmap>=0.6.2",
    "pygfx>=0.14.0",
    "llvmlite>=0.46.0",
    "numba>=0.63.1",
    "umap-learn>=0.5.9.post2",
    "scipy>=1.15.3",
    "gevent==25.5.1",
    "cloud-volume>=12.8.0",
    "octarine3d>=0.3.3",
    "octarine-navis-plugin>=0.1.5",
    "navis>=1.10.0",
    "dvidtools>=0.6.0",
    "pyperclip>=1.11.0",
    "nglscenes",
    "pyarrow>=23.0.0",
    "pyqtgraph>=0.14.0",
    "scikit-learn>=1.7.2",
    "networkx>=3.4.2",
]

[project.scripts]
bigclust2 = "bigclust2_launcher:main"

[tool.setuptools]
py-modules = ["bigclust2_launcher"]

[tool.setuptools.packages.find]
exclude = ["assets*", "scripts*"]

[tool.setuptools.package-data]
bigclust2 = ["assets/*.png"]

[tool.uv.sources]
nglscenes = { git = "https://github.com/schlegelp/nglscenes", rev = "main" }
