[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigclust2"
description = "A graphical interface for interactively exploring clusterings of high-dimensional connectomic data"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Philipp Schlegel", email = "pms70@cam.ac.uk" },
]
keywords = [
    "connectomics",
    "clustering",
    "neuroscience",
    "visualization",
    "gui",
    "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
dependencies = [
    "pandas>=2.3.3",
    "pyside6>=6.8.2.1",
    "requests>=2.32.5",
    "polars>=1.36.1",
    "cmap>=0.6.2",
    "pygfx>=0.14.0",
    "llvmlite>=0.46.0",
    "numba>=0.63.1",
    "umap-learn>=0.5.9.post2",
    "scipy>=1.15.3",
    "gevent==25.5.1",
    "cloud-volume>=12.8.0",
    "octarine3d>=0.5.0",
    "octarine-navis-plugin>=0.1.5",
    "navis>=1.10.0",
    "dvidtools>=0.6.0",
    "pyperclip>=1.11.0",
    "nglscenes>=0.5.0",
    "pyarrow>=23.0.0",
    "pyqtgraph>=0.14.0",
    "scikit-learn>=1.7.2",
    "networkx>=3.4.2",
    "sea-serpent>=0.4.4",
    "plotly>=6.7.0",
    "neuprint-python>=0.6.2",
]

[project.optional-dependencies]
clio = ["clio-py>=0.1.0"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/flyconnectome/bigclust2"
Repository = "https://github.com/flyconnectome/bigclust2"
Issues = "https://github.com/flyconnectome/bigclust2/issues"

[project.scripts]
bigclust2 = "bigclust2_launcher:main"

[tool.setuptools]
py-modules = ["bigclust2_launcher"]

[tool.setuptools.dynamic]
version = { attr = "bigclust2.__version__.__version__" }

[tool.setuptools.packages.find]
exclude = ["assets*", "scripts*", "tests*"]

[tool.setuptools.package-data]
bigclust2 = ["assets/*.png"]

[tool.uv.sources]
nglscenes = { git = "https://github.com/schlegelp/nglscenes", rev = "main" }
clio-py = { git = "https://github.com/schlegelp/clio-py", rev = "main" }
